I fixed the header and dark mode issue with the blogs page.

--- a/css/darkMode/blogs.css
+++ b/css/darkMode/blogs.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 @font-face {
   font-family: 'calibreR';
   src: url('../../fonts/Calibre-Regular.otf') format('opentype');
@@ -23,6 +29,11 @@ h1, h2, p, a{
   color: #f3f3f3;
 }
 
+h2, p{
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+}
+
 h1{
   font-size: 2.5rem;
   font-family: "calibreB";
@@ -42,7 +53,7 @@ a{
   text-decoration: none;
 }
 
-img{
+.allImg{
   box-shadow: 10px 10px hsla(197, 23%, 57%, 0.15);
 }
 
@@ -55,10 +66,6 @@ body{
   background-attachment: fixed;
 }
 
-header{
-  border: 0;
-}
-
 main{
   display: grid;
   grid-template-columns: repeat(3, 1fr); 
@@ -67,16 +74,16 @@ main{
 .topText{
   text-align: center;
   margin-top: 100px;
-}
-
-.intro{
-  margin-bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 hr{
   border: 2px solid white;
-  width: 100px;
-  margin-top: 0;
+  width: 10%;
+  margin-bottom: 40px;
 }
 
 .postLeft{
@@ -95,7 +102,7 @@ hr{
 }
 
 .squareLeft{
-  background-color: #1f3c47;
+  background-color: #181a1b;
   min-height: 50px;
   min-width: 150px;
   border-radius: 12px;
@@ -105,7 +112,7 @@ hr{
 }
 
 .postLeft:hover{
-  background-color: #799DAB;
+  background-color: #263743;
   transition: all 0.1s ease-in-out;
 }
 
@@ -125,7 +132,7 @@ hr{
 }
 
 .squareCenter{
-  background-color: #1f3c47;
+  background-color: #181a1b;
   min-height: 50px;
   min-width: 150px;
   border-radius: 12px;
@@ -135,7 +142,7 @@ hr{
 }
 
 .postCenter:hover{
-  background-color: #799DAB;
+  background-color: #263743;
   transition: all 0.1s ease-in-out;
 }
 
@@ -155,7 +162,7 @@ hr{
 }
 
 .squareRight{
-  background-color: #1f3c47;
+  background-color: #181a1b;
   min-height: 50px;
   min-width: 150px;
   border-radius: 12px;
@@ -165,6 +172,6 @@ hr{
 }
 
 .postRight:hover{
-  background-color: #799DAB;
+  background-color: #263743;
   transition: all 0.1s ease-in-out;
 }
